--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body
 {
     background-color: #d3dbde;
+    font-family: sans-serif;
 }
 h2
 {
     background-color: #7b929d;
     color: #415058;
     text-decoration: underline;
+    font-size: xx-large;
 }
 h1.titulo
 {
     color: #333333;
     text-align: center;
+    font-size: 40px;
 }
 .gris_claro
 {
@@ -25,10 +28,20 @@ h3.idiomas
 {
     background-color: #98aab3;
     color: #576b75;
+    font-size: 21px;
+    font-style: italic;
 }
 p.autor
 {
     background-color: white;
     text-align: right;
     font-weight: bold;
+}
+span
+{
+    color: darkblue;
+}
+strong
+{
+    color: royalblue;
 }
